# maxestimation

c++/maxest/: CMakeLists.txt
c++/maxest/examples/: CMakeLists.txt  main_maxestfromgp.cpp  main_simpletest.cpp
c++/maxest/include/maxest/: estimator.h  gp.h  mcestimator.h  niestimator.h
c++/maxest/scripts/: py_gps.py  test_gps.m
c++/maxest/src/: gp.cpp  mcestimator.cpp  niestimator.cpp
examples/: parallel_pricing.bash  parallel_pricing_bins.bash  pricing.bash  pricing_bins.bash  pricing_est.py  pricing_test.py  prova.py  prova2.py
examples/scripts/: parse_MME_MMD_results.py  parse_MWE_results.py  read_results.py
maxest/: estimate.py  fixsestimate.py
tests/: test_gps.py  test_integral.py
